--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,9 @@
 server.port= 8080
 
 #datasource
-spring.datasource.url=jdbc:mysql://root:nIIZVvDZNMwMmiaIZGJEsPscfdUMlqOi@ballast.proxy.rlwy.net:57909/railway2?createDatabaseIfNotExist=true&useSSL=true
+spring.datasource.url=jdbc:mysql://root:dDfgrKQSXpERANqmynemzADEEWnnXLSX@yamanote.proxy.rlwy.net:37396/railway2?createDatabaseIfNotExist=true&useSSL=true
 spring.datasource.username=root
-spring.datasource.password=nIIZVvDZNMwMmiaIZGJEsPscfdUMlqOi
+spring.datasource.password=dDfgrKQSXpERANqmynemzADEEWnnXLSX
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.generate-ddl=true
